@@ -1,4 +1,5 @@
 {{$NEXT}}
+    - Mention App::Pocoirc in the SYNOPSIS
 
 0.41  Mon Sep 6 04:36:34 GMT 2010
     - Add a 'Channels' parameter
